src/component/chip/chip.scss
@import '@/style//fonts.scss';
@import '@/style//mixins.scss';
@import '@/style//theme.scss';

.okp4-dataverse-portal-chip-main {
  @include with-theme() {
    padding: 8px 12px;
    border-radius: 12px;
    box-sizing: border-box;
    background-color: themed(tertiary-button-background);
    cursor: pointer;

    @include use-breakpoints(('large-desktop')) {
      padding: 8px 16px;
    }

    &.selected {
      background-color: themed(primary-color-variant-1);
    }

    .okp4-dataverse-portal-chip-content {
      display: flex;
      justify-content: space-between;
      align-items: center;
      white-space: pre;

      &:not(.okp4-dataverse-portal-chip-icon) {
        justify-content: center;
      }

      .okp4-dataverse-portal-chip-icon {
        display: flex;
        margin-right: 10px;

        svg {
          width: 20px;
          height: 20px;
        }

        &.selected {
          svg {
            path {
              fill: themed(primary-text);
            }
          }
        }
      }

      .okp4-dataverse-portal-chip-label {
        @include noto-sans(400);
        color: themed(chip);
        width: 100%;
        font-size: 16px;
        line-height: 24px;
        word-wrap: break-word;
        overflow: hidden;
        text-overflow: ellipsis;

        &.selected {
          @include noto-sans(700);
          color: themed(primary-text);
        }
      }
    }
  }
}

